--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   weather: ^3.1.1
-  modal_progress_hud_nsn: ^0.4.0
-  flushbar: ^1.10.4
+  
 
 dev_dependencies:
   flutter_test:
@@ -78,16 +77,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  fonts:
+    - family: squatina
+      fonts:
+      - asset: assets/fonts/squatina/Squatina-Regular.otf   
+        
+    - family: montserrat
+      fonts:
+      - asset: assets/fonts/montserrat/Montserrat-Regular.otf
+       
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
